tests/ui/endpoint/wants_auth_non_bool.stderr
error: Expected boolean literal
 --> tests/ui/endpoint/wants_auth_non_bool.rs:8:25
  |
8 | #[read_all(wants_auth = "yes, please")]
  |                         ^^^^^^^^^^^^^

error[E0412]: cannot find type `read_all___gotham_restful_endpoint` in this scope
 --> tests/ui/endpoint/wants_auth_non_bool.rs:5:12
  |
5 | #[resource(read_all)]
  |            ^^^^^^^^ not found in this scope
